--- a/src/components/Home/HomeServices.css
+++ b/src/components/Home/HomeServices.css
@@ -31,24 +31,23 @@
     opacity: 0.4;
 }
 .home-text-container {
-    overflow: hidden; 
-    width: 200%; 
+    display: flex;
   }
-  
-  .home-services-h2 {
-    font-size: 1.875em;
+
+.services-h2-animation{
+    white-space: nowrap;
+    padding: 1rem;
+    animation: scrollLeft 4s linear infinite;
+}
+
+.home-services-h2 {
+    font-size: clamp(1.875em,7vw,4.4em);
     color: #fff;
-    white-space: nowrap; 
-    display: inline-block; 
-    animation: scrollLeft 10s linear infinite; 
-  }
-  
-  @keyframes scrollLeft {
-    0% {
-      transform: translateX(200%);
-    }
+    text-wrap: nowrap;
+}
+@keyframes scrollLeft {
     100% {
-      transform: translateX(-200%);
+      transform: translateX(-100%);
     }
   }
 .home-services-h2 span{
@@ -70,15 +69,6 @@
         display: flex;
         flex-direction: column;
     }
-    .home-services-h2{
-        font-size: 2.7em;
-        transform: translateX(50%);
-    }
-    @keyframes home-services-h2-animation{
-        100%{
-            transform: translateX(0%);
-        }
-    }
     .home-services-img{
         align-self: center;
         margin-left: 4rem;
@@ -93,7 +83,7 @@
     }
 }
 @media(min-width:56.25rem){
-    .home-services-info, .home-services-h2{
+    .home-services-info{
         padding: 0 2.5rem;
     }
     .home-services-h2{
@@ -121,9 +111,9 @@
     .home-services-info{
         padding: 0 4rem;
     }
-    .home-services-h2{
+    /* .home-services-h2{
         font-size: 4.5em;
-    }
+    } */
     .home-services-p{
         font-size: 1.875em;
         line-height: 2.23rem;
